--- a/src/style.css
+++ b/src/style.css
@@ -1,98 +1,98 @@
 * {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
 }
 
 body {
-    font-family: sans-serif;
-    background: #fff;
+  font-family: sans-serif;
+  background: #fff;
 }
 
 .container {
-    margin: 10%;
+  margin: 10%;
 }
 
 .headline {
-    margin: 5% 0;
-    font-size: 50px;
-    font-weight: bold;
+  margin: 5% 0;
+  font-size: 50px;
+  font-weight: bold;
 }
 
 .scoreline {
-    display: flex;
-    justify-content: space-between;
-    width: 90%;
+  display: flex;
+  justify-content: space-between;
+  width: 90%;
 }
 
 .scoresheet {
-    width: 40%
+  width: 40%;
 }
 
 .wrap {
-    display: flex;
-    justify-content: space-between;
+  display: flex;
+  justify-content: space-between;
 }
 
 .addscores {
-    display: flex;
-    flex-direction: column;
+  display: flex;
+  flex-direction: column;
 }
 
 .recentScore {
-    padding: 0px 30px;
-    font-size: 40px;
+  padding: 0px 30px;
+  font-size: 40px;
 }
 
 .addscore-text {
-    font-size: 40px;
+  font-size: 40px;
 }
 
 input {
-    padding: 10px;
-    margin: 3% 0;
+  padding: 10px;
+  margin: 3% 0;
 }
 
 .btn-submit {
-    width: 32%;
-    padding: 5%;
-    box-sizing: border-box;
-    display: flex;
-    align-self: flex-end;
+  width: 32%;
+  padding: 5%;
+  box-sizing: border-box;
+  display: flex;
+  align-self: flex-end;
 }
 
 table {
-    width: 90%;
-    border: 1px solid black;
-    margin-left: 10%;
-    margin-top: 10%;
+  width: 90%;
+  border: 1px solid black;
+  margin-left: 10%;
+  margin-top: 10%;
 }
 
 tbody {
-    display: flex;
-    flex-direction: column;
+  display: flex;
+  flex-direction: column;
 }
 
 td {
-    font-size: 20px;
+  font-size: 20px;
 }
 
 .refresh {
-    padding: 5px;
-    box-sizing: border-box;
-    height: 10%;
-    margin-top: 10px;
+  padding: 5px;
+  box-sizing: border-box;
+  height: 10%;
+  margin-top: 10px;
 }
 
 tr td {
-    padding: 10%;
-    font-family: 'poppin', sans-serif;
+  padding: 10%;
+  font-family: "poppin", sans-serif;
 }
 
 tr:nth-child(even) {
-    background-color: #ddd;
+  background-color: #ddd;
 }
 
 tr:hover {
-    background-color: aquamarine;
+  background-color: aquamarine;
 }
