--- a/src/style.css
+++ b/src/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Crete+Round&family=Inter:wght@700&family=Kalam:wght@300&family=Poppins:wght@300&family=Roboto:wght@700&family=Varela+Round&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Crete+Round&family=Inter:wght@700&family=Kalam:wght@300&family=Poppins:wght@300&family=Roboto:wght@700&family=Varela+Round&display=swap");
 
 * {
   padding: 0;
@@ -9,7 +9,7 @@
 body {
   font-family: sans-serif;
   background: #fff;
-  background-image: url('./istockphoto-1313837017-612x612.jpg');
+  background-image: url("./istockphoto-1313837017-612x612.jpg");
 }
 
 .container {
@@ -110,7 +110,6 @@ tr:hover {
   background-color: aquamarine;
 }
 
-/* used in js */
 .hidden {
   display: none;
 }
